--- a/Server/.env
+++ b/Server/.env
@@ -1,6 +1,6 @@
 DB_NAME=PurrrfectMatch
-DB_USER=abd
-DB_PASS=Abd2001@
+DB_USER=postgres
+DB_PASS=1234
 DB_HOST=localhost
 DB_PORT=5432
 
@@ -36,5 +36,4 @@ npx sequelize-cli init --> just when create the project file for the first time
 npx sequelize-cli db:create
 npx sequelize-cli db:migrate
 npx sequelize-cli db:seed:all
-npx sequelize-cli db:seed:undo:all
 npx sequelize-cli db:migrate:undo:all
